[package]
name = "value_script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vstc"
path = "src/vstc/main.rs"
test = false
bench = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
queues = "1.0.2"
serde = "1.0"
serde_json = "1.0"
swc_common = { version = "0.17.22", features=["tty-emitter"] }
swc_ecma_parser = "0.102.2"
swc = "0.168.3"
swc_ecma_ast = "0.76.0"
swc_atoms = "0.2"

# wasm-related

wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
