[package]
name = "vstc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valuescript_compiler = { path = "../valuescript_compiler" }
valuescript_vm = { path = "../valuescript_vm" }
storage = { path = "../storage" }
url = "2.2.1"
serde = "1.0"
serde_qs = "0.8.0"
termion = "2.0.1"
actix-web = "4"
tokio = "1"
